--- a/Homework/Puzzle/Puzzle/MainWindow.xaml
+++ b/Homework/Puzzle/Puzzle/MainWindow.xaml
@@ -64,8 +64,26 @@
                     </Grid>
                     
                     <Grid>
-                        <Border Name="puzzlePiece6" Margin="34, 0, 34, 37" Height="{Binding ElementName=puzzlePiece6, Path=ActualWidth}" Background="#C3B5A8" BorderBrush="#93816B" BorderThickness="3" AllowDrop="True" Drop="puzzlePieceImg_Drop">
+                        <Border Name="puzzlePiece6" Margin="34, 0, 34, 30" Height="{Binding ElementName=puzzlePiece6, Path=ActualWidth}" Background="#C3B5A8" BorderBrush="#93816B" BorderThickness="3" AllowDrop="True" Drop="puzzlePieceImg_Drop">
                             <Image Name="puzzlePieceImg6" Stretch="Uniform" MouseDown="puzzlePieceImg_MouseDown"/>
+                        </Border>
+                    </Grid>
+
+                    <Grid>
+                        <Border Name="puzzlePiece7" Margin="34, 0, 34, 30" Height="{Binding ElementName=puzzlePiece6, Path=ActualWidth}" Background="#C3B5A8" BorderBrush="#93816B" BorderThickness="3" AllowDrop="True" Drop="puzzlePieceImg_Drop">
+                            <Image Name="puzzlePieceImg7" Stretch="Uniform" MouseDown="puzzlePieceImg_MouseDown"/>
+                        </Border>
+                    </Grid>
+
+                    <Grid>
+                        <Border Name="puzzlePiece8" Margin="34, 0, 34, 30" Height="{Binding ElementName=puzzlePiece6, Path=ActualWidth}" Background="#C3B5A8" BorderBrush="#93816B" BorderThickness="3" AllowDrop="True" Drop="puzzlePieceImg_Drop">
+                            <Image Name="puzzlePieceImg8" Stretch="Uniform" MouseDown="puzzlePieceImg_MouseDown"/>
+                        </Border>
+                    </Grid>
+
+                    <Grid>
+                        <Border Name="puzzlePiece9" Margin="34, 0, 34, 37" Height="{Binding ElementName=puzzlePiece6, Path=ActualWidth}" Background="#C3B5A8" BorderBrush="#93816B" BorderThickness="3" AllowDrop="True" Drop="puzzlePieceImg_Drop">
+                            <Image Name="puzzlePieceImg9" Stretch="Uniform" MouseDown="puzzlePieceImg_MouseDown"/>
                         </Border>
                     </Grid>
                 </StackPanel>
@@ -78,6 +96,7 @@
 
         <Grid Name="puzzle" Grid.Row="2" Grid.Column="2">
             <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
@@ -97,14 +116,23 @@
             <Border Name="mainPuzzle3" Grid.Column="2" Background="#C3B5A8" BorderBrush="#93816B" BorderThickness="1.5, 3, 3, 1.5" AllowDrop="True" Drop="mainPuzzleImg_Drop">
                 <Image Name="mainPuzzleImg3" Stretch="Fill" MouseDown="mainPuzzleImg_MouseDown"/>
             </Border>
-            <Border Name="mainPuzzle4" Grid.Row="1" Background="#C3B5A8" BorderBrush="#93816B" BorderThickness="3, 1.5, 1.5, 3" AllowDrop="True" Drop="mainPuzzleImg_Drop">
+            <Border Name="mainPuzzle4" Grid.Row="1" Background="#C3B5A8" BorderBrush="#93816B" BorderThickness="3, 1.5, 1.5, 1.5" AllowDrop="True" Drop="mainPuzzleImg_Drop">
                 <Image Name="mainPuzzleImg4" Stretch="Fill" MouseDown="mainPuzzleImg_MouseDown"/>
             </Border>
-            <Border Name="mainPuzzle5" Grid.Row="1" Grid.Column="1" Background="#C3B5A8" BorderBrush="#93816B" BorderThickness="1.5, 1.5, 1.5, 3" AllowDrop="True" Drop="mainPuzzleImg_Drop">
+            <Border Name="mainPuzzle5" Grid.Row="1" Grid.Column="1" Background="#C3B5A8" BorderBrush="#93816B" BorderThickness="1.5, 1.5, 1.5, 1.5" AllowDrop="True" Drop="mainPuzzleImg_Drop">
                 <Image Name="mainPuzzleImg5" Stretch="Fill" MouseDown="mainPuzzleImg_MouseDown"/>
             </Border>
-            <Border Name="mainPuzzle6" Grid.Row="1" Grid.Column="2" Background="#C3B5A8" BorderBrush="#93816B" BorderThickness="1.5, 1.5, 3, 3" AllowDrop="True" Drop="mainPuzzleImg_Drop">
+            <Border Name="mainPuzzle6" Grid.Row="1" Grid.Column="2" Background="#C3B5A8" BorderBrush="#93816B" BorderThickness="1.5, 1.5, 3, 1.5" AllowDrop="True" Drop="mainPuzzleImg_Drop">
                 <Image Name="mainPuzzleImg6" Stretch="Fill" MouseDown="mainPuzzleImg_MouseDown"/>
+            </Border>
+            <Border Name="mainPuzzle7" Grid.Row="2" Background="#C3B5A8" BorderBrush="#93816B" BorderThickness="3, 1.5, 1.5, 3" AllowDrop="True" Drop="mainPuzzleImg_Drop">
+                <Image Name="mainPuzzleImg7" Stretch="Fill" MouseDown="mainPuzzleImg_MouseDown"/>
+            </Border>
+            <Border Name="mainPuzzle8" Grid.Row="2" Grid.Column="1" Background="#C3B5A8" BorderBrush="#93816B" BorderThickness="1.5, 1.5, 1.5, 3" AllowDrop="True" Drop="mainPuzzleImg_Drop">
+                <Image Name="mainPuzzleImg8" Stretch="Fill" MouseDown="mainPuzzleImg_MouseDown"/>
+            </Border>
+            <Border Name="mainPuzzle9" Grid.Row="2" Grid.Column="2" Background="#C3B5A8" BorderBrush="#93816B" BorderThickness="1.5, 1.5, 3, 3" AllowDrop="True" Drop="mainPuzzleImg_Drop">
+                <Image Name="mainPuzzleImg9" Stretch="Fill" MouseDown="mainPuzzleImg_MouseDown"/>
             </Border>
         </Grid>
     </Grid>
